[gd_scene load_steps=3 format=3 uid="uid://b66eer0eet1j7"]

[ext_resource type="Script" uid="uid://bh26q54udpf1n" path="res://src/hud/hud.gd" id="1_t0re6"]
[ext_resource type="Theme" uid="uid://1n0tuf8ntefx" path="res://assets/UI/theme.tres" id="2_3phq6"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_t0re6")

[node name="PlayerHitpoints" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -150.0
offset_top = -30.0
offset_right = 250.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
theme = ExtResource("2_3phq6")
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerHitpoints"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.5
offset_top = -27.0
offset_right = 10.5
grow_horizontal = 2
grow_vertical = 0

[node name="CurrentHp" type="Label" parent="PlayerHitpoints/HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slash" type="Label" parent="PlayerHitpoints/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="MaxHp" type="Label" parent="PlayerHitpoints/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.1
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
